--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-rough-notation": "^1.0.5",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
